<resources>
    <string name="app_name">Minesweeper</string>
    <string name="one_mine">1</string>
    <string name="two_mine">2</string>
    <string name="three_mine">3</string>
    <string name="four_mine">4</string>
    <string name="five_mine">5</string>
    <string name="six_mine">6</string>
    <string name="seven_mine">7</string>
    <string name="eight_mine">8</string>


    <!-- this is for main home fragment -->
    <string name="minesweeper_title">MINESWEEPER</string>
    <string name="play">PLAY</string>

    <!-- this is for difficulty selection-->
    <string name="beginner">BEGINNER</string>
    <string name="medium">MEDIUM</string>
    <string name="advanced">ADVANCED</string>


    <!-- this is for game fragment -->
    <string name="reset_button">RESET</string>
    <string name="amount_of_mines">00</string>


    <!-- this is for win and lose screen-->
    <string name="game_win">YOU WIN</string>
    <string name="game_lose">YOU LOSE</string>

</resources>