<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gameStatusContainer"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/bg_round"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/resetButton"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/reset_button"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/cellsContainer"
        android:layout_width="match_parent"
        android:layout_height="580dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameStatusContainer">

        <GridLayout
            android:id="@+id/glCellsOfGame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cellsContainer">

        <ImageButton
            android:id="@+id/flagButton"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:src="@drawable/flag"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitCenter"
            android:background="@drawable/bg_unselect_mode"/>

        <TextView
            android:id="@+id/tvAmountOfFlags"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_round"
            android:fontFamily="@font/mine_sweeper"
            android:gravity="center"
            tools:text="@string/amount_of_mines"
            android:textColor="@color/yellow"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/digButton"
            app:layout_constraintStart_toEndOf="@id/flagButton"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageButton
            android:id="@+id/digButton"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginEnd="40dp"
            android:src="@drawable/shovel"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/bg_select_mode"
            android:padding="5dp"
            android:focusable="true"
            android:clickable="true"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/winLoseContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_round"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvWinCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mine_sweeper"
            android:textColor="@color/yellow"
            android:textSize="40sp"
            tools:text="@string/game_win"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>






